--- a/pom.xml
+++ b/pom.xml
@@ -180,5 +180,11 @@
 			<version>[1.0,)</version>
 			<optional>false</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.graphstream</groupId>
+			<artifactId>gs-algo</artifactId>
+			<version>[1.1,)</version>
+			<optional>false</optional>
+		</dependency>
 	</dependencies>
 </project>
